# QueueModel

./: README.md  pyproject.toml
src/queuemodel/: __init__.py  queue.py
